Analysed the data information

--- a/linearreg.ipynb
+++ b/linearreg.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 384,
    "id": "58ef0354",
    "metadata": {},
    "outputs": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 385,
    "id": "2d9898b5-85a6-4c2b-aaf2-4db3f159c565",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 386,
    "id": "a22ed8e8-14ae-4c99-8d82-318b171199e7",
    "metadata": {},
    "outputs": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 387,
    "id": "f373c02a-9398-487c-9faf-6645796d83d0",
    "metadata": {},
    "outputs": [
@@ -253,7 +253,7 @@
        "6    -122.25       2.992  "
       ]
      },
-     "execution_count": 248,
+     "execution_count": 387,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 388,
    "id": "ceda2a40-b1bd-4d2b-b992-c8355b6aa117",
    "metadata": {},
    "outputs": [
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 389,
    "id": "c9cef96f-a8ad-410b-9cc6-653ab618809f",
    "metadata": {},
    "outputs": [
@@ -315,7 +315,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 250,
+     "execution_count": 389,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 390,
    "id": "59173a04-a230-40ec-9807-3c74f7cc3076",
    "metadata": {},
    "outputs": [
@@ -344,7 +344,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 251,
+     "execution_count": 390,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 391,
    "id": "30a81ad6-556b-436d-aee6-416eb404f0d7",
    "metadata": {},
    "outputs": [
@@ -522,7 +522,7 @@
        "max     1243.333333     41.950000   -114.310000      5.000010  "
       ]
      },
-     "execution_count": 252,
+     "execution_count": 391,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 392,
    "id": "4f8be8c3-cb08-400c-b6de-2d453494ffb6",
    "metadata": {},
    "outputs": [
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 393,
    "id": "1f6e9642-360b-42f8-b910-8f7c53fa4f2c",
    "metadata": {},
    "outputs": [
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 394,
    "id": "830700c2-7bde-4228-817c-0d91ff3444c5",
    "metadata": {},
    "outputs": [
@@ -635,7 +635,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 255,
+     "execution_count": 394,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 395,
    "id": "90b0b07e-7d08-4c64-9d37-1d73a5155355",
    "metadata": {},
    "outputs": [
@@ -674,7 +674,7 @@
        "<Axes: xlabel='MedInc', ylabel='HouseValue'>"
       ]
      },
-     "execution_count": 256,
+     "execution_count": 395,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 396,
    "id": "9493a69f",
    "metadata": {},
    "outputs": [
@@ -714,7 +714,7 @@
        "<Axes: xlabel='Latitude', ylabel='Longitude'>"
       ]
      },
-     "execution_count": 257,
+     "execution_count": 396,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -743,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 397,
    "id": "43f8217c",
    "metadata": {},
    "outputs": [],
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 398,
    "id": "0ad7267f",
    "metadata": {},
    "outputs": [
@@ -774,7 +774,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 259,
+     "execution_count": 398,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -796,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 399,
    "id": "1f57a04e",
    "metadata": {},
    "outputs": [
@@ -819,7 +819,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 260,
+     "execution_count": 399,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -830,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 400,
    "id": "a5f63ea3",
    "metadata": {},
    "outputs": [
@@ -853,7 +853,7 @@
        "        <Axes: >, <Axes: >]], dtype=object)"
       ]
      },
-     "execution_count": 261,
+     "execution_count": 400,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -882,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 401,
    "id": "069f5e0f",
    "metadata": {},
    "outputs": [],
@@ -896,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 402,
    "id": "8e997375",
    "metadata": {},
    "outputs": [
@@ -923,7 +923,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 263,
+     "execution_count": 402,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -944,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 403,
    "id": "b9980b14",
    "metadata": {},
    "outputs": [],
@@ -954,7 +954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 404,
    "id": "c23f7682-95c9-48d7-9029-0ea64e2482b0",
    "metadata": {},
    "outputs": [],
@@ -967,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 405,
    "id": "1f2d41f9-e25f-4d72-80a7-e092051fe98f",
    "metadata": {},
    "outputs": [
@@ -992,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 406,
    "id": "f1249ee2-7f30-4949-b80e-119969fc7556",
    "metadata": {},
    "outputs": [],
@@ -1005,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 407,
    "id": "a5c6d3a7-ac50-4a78-b718-e6b8bce10088",
    "metadata": {},
    "outputs": [
@@ -1015,7 +1015,7 @@
        "<Axes: xlabel='HouseValue', ylabel='Density'>"
       ]
      },
-     "execution_count": 268,
+     "execution_count": 407,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1055,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 408,
    "id": "876c739f-b5ba-4725-aba6-a3cba2e3c9c3",
    "metadata": {},
    "outputs": [
@@ -1098,7 +1098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 409,
    "id": "19a9076b",
    "metadata": {},
    "outputs": [
@@ -1138,7 +1138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": 410,
    "id": "72ae989e",
    "metadata": {},
    "outputs": [
@@ -1148,7 +1148,7 @@
        "(20640, 6)"
       ]
      },
-     "execution_count": 340,
+     "execution_count": 410,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1158,7 +1158,6 @@
     "from sklearn.decomposition import PCA\n",
     "scaler = StandardScaler()\n",
     "X_Scaled_1 = scaler.fit_transform(X)\n",
-    "y_Scaled_1 = y\n",
     "pca = PCA(n_components = 6)\n",
     "X_pca = pca.fit_transform(X_Scaled_1)\n",
     "X_pca.shape"
@@ -1166,7 +1165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 341,
+   "execution_count": 411,
    "id": "af4ab1ed",
    "metadata": {},
    "outputs": [
@@ -1177,7 +1176,7 @@
        "       0.64862449])"
       ]
      },
-     "execution_count": 341,
+     "execution_count": 411,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1189,7 +1188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 342,
+   "execution_count": 412,
    "id": "2168621e",
    "metadata": {},
    "outputs": [
@@ -1200,7 +1199,7 @@
        "       0.05404942])"
       ]
      },
-     "execution_count": 342,
+     "execution_count": 412,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1212,7 +1211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 343,
+   "execution_count": 413,
    "id": "26697f46",
    "metadata": {},
    "outputs": [
@@ -1223,7 +1222,7 @@
        "       0.94624407])"
       ]
      },
-     "execution_count": 343,
+     "execution_count": 413,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1235,7 +1234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 344,
+   "execution_count": 414,
    "id": "eebb8f95",
    "metadata": {},
    "outputs": [
@@ -1262,7 +1261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 345,
+   "execution_count": 415,
    "id": "abd36607",
    "metadata": {},
    "outputs": [
@@ -1272,7 +1271,7 @@
        "<Axes: xlabel='HouseValue', ylabel='Density'>"
       ]
      },
-     "execution_count": 345,
+     "execution_count": 415,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1288,7 +1287,7 @@
     }
    ],
    "source": [
-    "X_train , X_test , y_train , y_test = train_test_split(X_pca , y_Scaled_1 , test_size = 0.2 , random_state = 42)\n",
+    "X_train , X_test , y_train , y_test = train_test_split(X_pca , y , test_size = 0.2 , random_state = 42)\n",
     "regression.fit(X_train , y_train)\n",
     "reg_pred1 = regression.predict(X_test)\n",
     "sns.kdeplot(reg_pred1 - y_test)"
@@ -1296,7 +1295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 416,
    "id": "ca03e300",
    "metadata": {},
    "outputs": [
@@ -1306,7 +1305,7 @@
        "54.776241713373565"
       ]
      },
-     "execution_count": 348,
+     "execution_count": 416,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1318,7 +1317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 417,
    "id": "ac8db5a9",
    "metadata": {},
    "outputs": [
